# ssd_human_detection

./: .gitignore  CMakeLists.txt  main.cpp
